samples/_failures_safe/1761139205_a405b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36d07a0b.c: In function ‘display_compression_result’:
./samples/SAFE/__tmp_36d07a0b.c:130:43: error: ‘struct CompressionHeader’ has no member named ‘comp’
  130 |         double ratio = (double)ctx->header.comp
      |                                           ^
./samples/SAFE/__tmp_36d07a0b.c:130:9: error: expected ‘,’ or ‘;’ at end of input
  130 |         double ratio = (double)ctx->header.comp
      |         ^~~~~~
./samples/SAFE/__tmp_36d07a0b.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_36d07a0b.c:130:9: error: expected declaration or statement at end of input
